fixed scrollbar

--- a/css/website.css
+++ b/css/website.css
@@ -137,7 +137,8 @@ p {
 
 .content {
 	width: 100%;
-	height: 100%;
+	height: calc(100% - 55px);
+	margin-top: 55px;
 	overflow-y: scroll;
 	overflow-x: hidden;		
 	scroll-snap-type: y mandatory;
